--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
-    "ts": "ts-node"
+    "ts": "ts-node",
+    "mock:server": "json-server ./mocks/mock-server-data.json --port 3123",
+    "cli": "node ./dist/main.cli.js"
   },
   "devDependencies": {
     "@types/node": "18.17.17",
@@ -22,6 +24,7 @@
     "@typescript-eslint/parser": "6.7.0",
     "eslint": "8.49.0",
     "eslint-config-htmlacademy": "9.1.1",
+    "json-server": "^0.17.3",
     "rimraf": "5.0.1",
     "ts-node": "10.9.1",
     "typescript": "5.2.2"
@@ -32,6 +35,8 @@
     "npm": ">=8"
   },
   "dependencies": {
-    "chalk": "5.3.0"
+    "chalk": "5.3.0",
+    "dayjs": "^1.11.10",
+    "got": "^13.0.0"
   }
 }
