--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "main": "main.js",
   "scripts": {
-    "start": "npm run build && node ./dist/main.js",
+    "start": "npm run build && node ./dist/main.rest.js",
+    "start:dev": "npm run ts ./src/main.rest.ts | pino-pretty -c -t SYS:standard",
     "build": "npm run clean && npm run compile",
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
@@ -19,12 +20,15 @@
     "cli": "node ./dist/main.cli.js"
   },
   "devDependencies": {
+    "@types/convict": "6.1.6",
+    "@types/convict-format-with-validator": "6.0.5",
     "@types/node": "18.17.17",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
     "eslint": "8.49.0",
     "eslint-config-htmlacademy": "9.1.1",
     "json-server": "^0.17.3",
+    "pino-pretty": "11.3.0",
     "rimraf": "5.0.1",
     "ts-node": "10.9.1",
     "typescript": "5.2.2"
@@ -36,7 +40,14 @@
   },
   "dependencies": {
     "chalk": "5.3.0",
+    "convict": "6.2.4",
+    "convict-format-with-validator": "6.2.0",
     "dayjs": "^1.11.10",
-    "got": "^13.0.0"
+    "dotenv": "16.4.5",
+    "got": "14.4.3",
+    "inversify": "6.0.2",
+    "pino": "9.5.0",
+    "reflect-metadata": "0.2.2",
+    "tslib": "^2.7.0"
   }
 }
