--- a/package.json
+++ b/package.json
@@ -42,11 +42,15 @@
   "dependencies": {
     "@typegoose/typegoose": "^11.5.0",
     "chalk": "5.3.0",
+    "class-transformer": "^0.5.1",
     "convict": "6.2.4",
     "convict-format-with-validator": "6.2.0",
     "dayjs": "^1.11.10",
     "dotenv": "16.4.5",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "got": "14.4.3",
+    "http-status-codes": "^2.3.0",
     "inversify": "6.0.2",
     "mongoose": "^7.5.3",
     "pino": "9.5.0",
