--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "devDependencies": {
     "@types/convict": "6.1.6",
     "@types/convict-format-with-validator": "6.0.5",
+    "@types/express": "^4.17.19",
+    "@types/mime-types": "^2.1.3",
+    "@types/multer": "^1.4.9",
     "@types/node": "18.17.17",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
@@ -53,7 +56,10 @@
     "got": "14.4.3",
     "http-status-codes": "^2.3.0",
     "inversify": "6.0.2",
+    "mime-types": "^2.1.35",
     "mongoose": "^7.5.3",
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.2",
     "pino": "9.5.0",
     "reflect-metadata": "0.2.2",
     "tslib": "^2.7.0"
